update working directory to defaults

--- a/.github/workflows/pg-16-build.yaml
+++ b/.github/workflows/pg-16-build.yaml
@@ -10,7 +10,10 @@ jobs:
     runs-on:
       group: ubuntu-latest
     timeout-minutes: 10
-    working-directory: ./16
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./16
 
     steps:
 
