update runs on to microsoft's runner

--- a/.github/workflows/pg-16-build.yaml
+++ b/.github/workflows/pg-16-build.yaml
@@ -7,8 +7,7 @@ jobs:
 
   PG16Image:
     name: "PG16 Image Build and Push"
-    runs-on:
-      group: ubuntu-latest
+    runs-on: ubuntu-latest
     timeout-minutes: 10
     defaults:
       run:
