--- a/.github/workflows/pg-16-build.yaml
+++ b/.github/workflows/pg-16-build.yaml
@@ -20,8 +20,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: check folder
+        run: ls -la
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
 
       - name: Build and push
         uses: docker/build-push-action@v4
